# Cpp-Template

./: .clang-tidy  .gitignore  CMakeLists.txt  ChangeLog.md  INSTALL.md  README.md  add_8h.html  add_8h.js  add_8h_source.html  annotated.html  annotated_dup.js  bar_8h.html  bar_8h_source.html  classes.html  classklib_1_1Bar-members.html  classklib_1_1Bar.html  classklib_1_1Bar.js  classklib_1_1Vec-members.html  classklib_1_1Vec.html  classklib_1_1Vec.js  dir_c4deac73006ad3d1787e421f2d774b3c.html  dir_c4deac73006ad3d1787e421f2d774b3c.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  index.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html  vec_8h.html  vec_8h_source.html  version_8h.html  version_8h_source.html
.github/codeql/: codeql_config.yml
.github/workflows/: benchmark.yml  build.yml  clang_tidy.yml  codeql.yml  coverage.yml  doxygen.yml  install.yml  release.yml  sanitizer.yml  valgrind.yml
benchmarks/: CMakeLists.txt  add_benchmark.cpp  bar_benchmark.cpp  benchmarks.cpp  vec_benchmark.cpp
cmake/: AddCompilerFlag.cmake  Check.cmake  ClangTidy.cmake  CompilerOptions.cmake  Coverage.cmake  Doxygen.cmake  Format.cmake  Install.cmake  Options.cmake  Sanitizer.cmake  TheCPack.cmake  Valgrind.cmake  Version.cmake  klib.pc.in  klibConfig.cmake.in
dev/bench/: data.js
docs/: Doxyfile.in
examples/: CMakeLists.txt  add.cpp  bar.cpp  vec.cpp
include/klib/: add.h  bar.h  vec.h  version.h
scripts/: build-install.sh  install-system.sh  install.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
search/search/: all_0.js  all_3.js  all_4.js  classes_0.js  defines_0.js  files_2.js  functions_0.js  functions_1.js  searchdata.js
src/: add.cpp  bar.cpp  main.cpp
tests/: CMakeLists.txt  add_test.cpp  bar_test.cpp  vec_test.cpp
